corrected the markup so that dropdown menu in todo item has higher z-index and does not get covered by next item

--- a/src/components/todo-item/todo-item.styles.scss
+++ b/src/components/todo-item/todo-item.styles.scss
@@ -21,6 +21,14 @@
     border: 2px solid blue;
   }
 
+  &__icons {
+    position: relative;
+    top: 0;
+    right: 4rem;
+    z-index: 11;
+    order: 1;
+  }
+
   // ICONS
 
   &__content {
@@ -50,11 +58,11 @@
 
     &--front {
       transform: rotateX(180deg);
-      z-index: -10;
+      // z-index: -10;
 
       &--visible {
         transform: rotateX(0);
-        z-index: 10;
+        // z-index: 10;
       }
 
       & > .todo-item__content {
@@ -105,15 +113,6 @@
 
       // font-size: 1.5rem;
       margin: 0 1rem;
-    }
-  }
-
-  &__icons {
-    transition: all 0.2s;
-
-    &--back {
-      grid-column: 2 / 3;
-      grid-row: 1 / 2;
     }
   }
 
